--- a/css/style.css
+++ b/css/style.css
@@ -81,106 +81,6 @@ p{
     color: #7fa242;
 }
 
-
-/* Бургер эксперемент */
-
-/* #menu__toggle {
-    opacity: 100;
-}
-  
-#menu__toggle:checked ~ .menu__btn > span {
-    transform: rotate(45deg);
-}
-#menu__toggle:checked ~ .menu__btn > span::before {
-top: 0;
-transform: rotate(0);
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-top: 0;
-transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu__box {
-visibility: visible;
-left: 0;
-}
-
-.menu__btn {
-display: flex;
-align-items: center;
-position: fixed;
-top: 20px;
-left: 20px;
-
-width: 26px;
-height: 26px;
-
-cursor: pointer;
-z-index: 1;
-}
-
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-display: block;
-position: absolute;
-
-width: 100%;
-height: 2px;
-
-background-color: #616161;
-
-transition-duration: .25s;
-}
-.menu__btn > span::before {
-content: '';
-top: -8px;
-}
-.menu__btn > span::after {
-content: '';
-top: 8px;
-}
-
-.menu__box {
-display: block;
-position: fixed;
-visibility: hidden;
-top: 0;
-left: -100%;
-
-width: 300px;
-height: 100%;
-
-margin: 0;
-padding: 80px 0;
-
-list-style: none;
-
-background-color: #ECEFF1;
-box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-
-transition-duration: .25s;
-}
-
-.menu__item {
-display: block;
-padding: 12px 24px;
-
-color: #333;
-
-font-family: 'Roboto', sans-serif;
-font-size: 20px;
-font-weight: 600;
-
-text-decoration: none;
-
-transition-duration: .25s;
-}
-.menu__item:hover {
-background-color: #CFD8DC;
-} */
-
-
-
 /* INTRO SLIDER */
 .slider{
     margin-bottom: -5px;
@@ -213,11 +113,11 @@ background-color: #CFD8DC;
 
 .slick-arrow.slick-next{
     right: 20px;
-    background: url(/img/circled-right.png) 0 0 / 100% no-repeat;
+    background: url(img/circled-right.png) 0 0 / 100% no-repeat;
 }
 .slick-arrow.slick-prev{
     left: 20px;
-    background: url(/img/circled-left.png)0 0 / 100% no-repeat;
+    background: url(img/circled-left.png)0 0 / 100% no-repeat;
 }
 
 .intro-head-text{
@@ -303,7 +203,7 @@ background-color: #CFD8DC;
 
 .do-you-like{
     height: 50vh;
-    background-image: url(/img/Intro.png);
+    background-image: url(img/Intro.png);
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -722,14 +622,14 @@ background-color: #CFD8DC;
 }
 
 .about-us_low::before{
-    content: url(/img/skobl.png);
+    content: url(img/skobl.png);
     position: absolute;
     left: -100px;
 }
 
 
 .about-us_low::after{
-    content: url(/img/skobr.png);
+    content: url(img/skobr.png);
     position: absolute;
     right: -100px;
 }
