--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,13 @@ p{
 
 .header{
     width: 100%;
-    height: 114px;
+    height: 10vh;
     background-color: #282a2e;
+    position: fixed;
+    z-index: 50;
+}
+.main-content{
+    padding-top: 10vh;
 }
 
 .text-regular{
@@ -183,8 +188,8 @@ background-color: #CFD8DC;
 
 /* INTRO SLIDER */
 .slider{
-    margin-bottom: -5px;
     position: relative;
+    margin-bottom: -5px;
 }
 .slider_item{
     position: relative;
@@ -207,7 +212,8 @@ background-color: #CFD8DC;
 }
 .slider_item img{
     width: 100%;
-    height:100vh;
+    height: 100%;
+    max-height:100vh;
 
 }
 
@@ -226,7 +232,7 @@ background-color: #CFD8DC;
     font-size: 55px;
     color: #fff;
     font-weight: 300;
-    padding: 5% 20%;
+    padding: 10% 20%;
 
 }
 
@@ -236,7 +242,7 @@ background-color: #CFD8DC;
     font-size: 40px;
     color: #fff;
     font-weight: 500;
-    padding: 10% 20%;
+    padding: 15% 20%;
 
 }
 
@@ -251,7 +257,7 @@ background-color: #CFD8DC;
     font-size: 36px;
     color: #fff;
     font-weight: 300;
-    padding: 58px;
+    padding: 1.5em;
     text-align: center;
 }
 
@@ -745,16 +751,25 @@ background-color: #CFD8DC;
 .about-us_content{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1 , 1fr);
     grid-gap: 15px;
 
 }
 
 .about-us_container{
-    height: 425px;
+    position: relative;
+    height: max-content;
     text-align: center;
     color: #fff;
     /* margin-bottom: 60px; */
 }
+
+.about_us-img{
+    /* width: 100%;
+    height: 100%; */
+}
+
+
 
 .about-us_container > h5{
     font-size: 18px;
@@ -947,7 +962,7 @@ background-color: #CFD8DC;
 }
 
 .under-footer_info{
-    padding-top: 55px;
+    padding-top: 2.5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1036,7 +1051,7 @@ background-color: #CFD8DC;
     }
     .slider_item img{
         width: 100%;
-        height: 50vh;
+        height: 70vh;
     }
 
     .navbar{
@@ -1190,6 +1205,7 @@ background-color: #CFD8DC;
         grid-template-rows: repeat(6,1fr);
         grid-gap: 10px;
         padding-bottom: 10px;
+    
     }
     .contact-form_input > input {
         width: 100%;
@@ -1228,7 +1244,7 @@ background-color: #CFD8DC;
         font-size: 12px;
     } 
     .under-footer_text{
-        font-size: 8px;
+        font-size: 10px;
     }
     .social-link{
         display: grid;
@@ -1272,7 +1288,7 @@ background-color: #CFD8DC;
 
     .slider_item img{
         width: 100%;
-        height: 30vh;
+        height: 100%;
     }
     .our-services-text , .section-header{
         font-size: 24px;
@@ -1283,11 +1299,11 @@ background-color: #CFD8DC;
         height: 35vh;
     }
     .liked_container > h2{
-        font-size: 25px;
+        font-size: 23px;
     }
     .liked_container > p{
-        font-size: 25px;
-        margin-top: 5px;
+        font-size: 24px;
+        margin-top: 0.25em;
     }
     .liked_container_xs > h2{
         font-size: 20px;
@@ -1421,7 +1437,7 @@ background-color: #CFD8DC;
         padding-top:30px;
     }
     .footer-column_info > h5 {
-        font-size: 12px;
+        font-size: 11px;
     }
     .column-info_list > li > p{
         font-size: 10px;
