--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ p{
     height: 10vh;
     background-color: #282a2e;
     position: fixed;
-    z-index: 50;
+    z-index: 3;
+
 }
 .main-content{
     padding-top: 10vh;
@@ -68,12 +69,21 @@ p{
     display: flex;
     align-items: center;
     text-decoration: none;
+    position: relative;
+    z-index: 3;
 }
 
+.header-logo img{
+    max-width: 100%;
+    display: block;
+}
 
 .navbar{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
+}
+
+.nav__list{
     display: flex;
 }
 
@@ -87,102 +97,6 @@ p{
 }
 
 
-/* Бургер эксперемент */
-
-/* #menu__toggle {
-    opacity: 100;
-}
-  
-#menu__toggle:checked ~ .menu__btn > span {
-    transform: rotate(45deg);
-}
-#menu__toggle:checked ~ .menu__btn > span::before {
-top: 0;
-transform: rotate(0);
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-top: 0;
-transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu__box {
-visibility: visible;
-left: 0;
-}
-
-.menu__btn {
-display: flex;
-align-items: center;
-position: fixed;
-top: 20px;
-left: 20px;
-
-width: 26px;
-height: 26px;
-
-cursor: pointer;
-z-index: 1;
-}
-
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-display: block;
-position: absolute;
-
-width: 100%;
-height: 2px;
-
-background-color: #616161;
-
-transition-duration: .25s;
-}
-.menu__btn > span::before {
-content: '';
-top: -8px;
-}
-.menu__btn > span::after {
-content: '';
-top: 8px;
-}
-
-.menu__box {
-display: block;
-position: fixed;
-visibility: hidden;
-top: 0;
-left: -100%;
-
-width: 300px;
-height: 100%;
-
-margin: 0;
-padding: 80px 0;
-
-list-style: none;
-
-background-color: #ECEFF1;
-box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-
-transition-duration: .25s;
-}
-
-.menu__item {
-display: block;
-padding: 12px 24px;
-
-color: #333;
-
-font-family: 'Roboto', sans-serif;
-font-size: 20px;
-font-weight: 600;
-
-text-decoration: none;
-
-transition-duration: .25s;
-}
-.menu__item:hover {
-background-color: #CFD8DC;
-} */
 
 
 
@@ -219,11 +133,11 @@ background-color: #CFD8DC;
 
 .slick-arrow.slick-next{
     right: 20px;
-    background: url(/img/circled-right.png) 0 0 / 100% no-repeat;
+    background: url(../img/circled-right.png) 0 0 / 100% no-repeat;
 }
 .slick-arrow.slick-prev{
     left: 20px;
-    background: url(/img/circled-left.png)0 0 / 100% no-repeat;
+    background: url(../img/circled-left.png)0 0 / 100% no-repeat;
 }
 
 .intro-head-text{
@@ -309,7 +223,7 @@ background-color: #CFD8DC;
 
 .do-you-like{
     height: 50vh;
-    background-image: url(/img/Intro.png);
+    background-image: url(../img/Intro.png);
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -416,25 +330,23 @@ background-color: #CFD8DC;
 
 
 .portfolio-card{
-    width: 100%;
-    height: 70vh;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 20vw);
     grid-gap: 10px;
 }
 
-.card-info{
-    background-color: #313337;
-    position: relative;
-}
-
-.card-info_img{
+.card-info > img{
     position: absolute;
     width: 100%;
     height: 100%;
 }
 
+
+.card-info{
+    background-color: #313337;
+    position: relative;
+}
 
 .about-card{
     opacity: 0;
@@ -987,7 +899,7 @@ background-color: #CFD8DC;
     }
     .slider_item img{
         width: 100%;
-        height:100vh;
+        height:100%;
     }
     .about-us_content{
         display: grid;
@@ -1047,23 +959,17 @@ background-color: #CFD8DC;
     }
     .slick-arrow{
         display: none;
-        z-index: -1;
     }
     .slider_item img{
         width: 100%;
-        height: 70vh;
-    }
-
-    .navbar{
-        display: none;
+        height: 100%;
     }
     .card-text__content{
         font-size: 10px;
     }
     .portfolio-card{
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 50%);
-        grid-gap: 1%;
+        grid-template-rows: repeat(4, 30vw);
         overflow: hidden;
     }
     .liked_container > h2{
@@ -1127,6 +1033,10 @@ background-color: #CFD8DC;
 
 }
 @media  (min-width: 480px) and (max-width: 767px) {
+    body.lock{
+        overflow: hidden;
+    }
+
     .intro-subhead-text{
         font-size: 18px;
     }
@@ -1139,10 +1049,85 @@ background-color: #CFD8DC;
     }
     .slider_item img{
         width: 100%;
-        height: 50vh;
+        height: 100%;
     }
+    .header__burger{
+        position: relative;
+        z-index: 3;
+        display: block;
+        width: 30px;
+        height: 20px;
+
+
+    }
+    .header__burger span{
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        top: 9px;
+        transition: all .3s ease 0s;
+    }
+
+    .header__burger::before,
+    .header__burger::after{
+        content: '';
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        transition: all .3s ease 0s;
+
+    }
+    .header__burger::before{
+        top: 0;
+    }
+    .header__burger::after{
+        bottom: 0;
+    }
+
+    .header__burger.active span {
+        transform: scale(0);
+        transition: 0.5s; 
+    }
+    .header__burger.active:before {
+        transform: rotate(45deg);
+        top: 9px;
+        transition: 0.4s;
+    }
+    .header__burger.active:after {
+        transform: rotate(-45deg);
+        bottom: 9px;
+        transition: 0.4s;
+    }
+
     .navbar{
-        display: none;
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: all .3s ease 0s;
+        padding: 12vh 0 0 0;
+        background-color: #282a2e;
+
+    }
+    .navbar.active{
+        top:0;
+    }
+
+
+    .nav__list{
+        display: block;
+        padding-left: 80%;
+    }
+    .nav__list li{
+        margin-bottom: 10px;
+    }
+    .nav-link{
+        margin: 0 10% 0 0;
     }
     .card-img{
         width: 70px;
@@ -1272,8 +1257,8 @@ background-color: #CFD8DC;
 }
 
 @media  (min-width: 320px) and (max-width: 479px) {
-    .navbar{
-        display: none;
+    body.lock{
+        overflow: hidden;
     }
     .intro-subhead-text{
         font-size: 12px;
@@ -1281,6 +1266,86 @@ background-color: #CFD8DC;
     .intro-head-text{
         font-size: 14px;
     }
+    .header__burger{
+        position: relative;
+        z-index: 3;
+        display: block;
+        width: 30px;
+        height: 20px;
+
+
+    }
+    .header__burger span{
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        top: 9px;
+        transition: all .3s ease 0s;
+    }
+
+    .header__burger::before,
+    .header__burger::after{
+        content: '';
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        transition: all .3s ease 0s;
+
+    }
+    .header__burger::before{
+        top: 0;
+    }
+    .header__burger::after{
+        bottom: 0;
+    }
+
+    .header__burger.active span {
+        transform: scale(0);
+        transition: 0.5s; 
+    }
+    .header__burger.active:before {
+        transform: rotate(45deg);
+        top: 9px;
+        transition: 0.4s;
+    }
+    .header__burger.active:after {
+        transform: rotate(-45deg);
+        bottom: 9px;
+        transition: 0.4s;
+    }
+
+    .navbar{
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: all .3s ease 0s;
+        padding: 12vh 0 0 0;
+        background-color: #282a2e;
+
+    }
+    .navbar.active{
+        top:0;
+    }
+
+
+    .nav__list{
+        display: block;
+        padding-left: 80%;
+    }
+    .nav__list li{
+        margin-bottom: 10px;
+    }
+    .nav-link{
+        margin: 0 10% 0 0;
+    }
+
+
     .slick-arrow{
         display: none;
         z-index: -1;
