--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,46 @@ p {
   display: none;
 }
 
+.ui-design{
+    display: flex;
+}
+.ui-design img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+}
+.ui-design_img{
+    width: 50%;
+}
+
+.ui-design_text{
+    width: 50%;
+    margin-left: 10px;
+    color: #fff;
+    font-size: 1rem;
+    
+}
+
+.video {
+    position:relative;
+    padding-bottom:56.25%;
+    padding-top:25px;
+    height:0;
+}
+
+.video iframe {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
+.photography{
+    color: #f4f4f4;
+    font-size: 1.1rem;
+    text-indent: 15px;
+}
 .tabs-list {
   width: 106px;
   height: 34px;
@@ -329,7 +369,6 @@ p {
 }
 
 .portfolio-card {
-  /* display: grid; */
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 20vw);
   grid-gap: 10px;
@@ -1114,6 +1153,18 @@ p {
     grid-template-rows: repeat(4, 50%);
     overflow: hidden;
   }
+  .ui-design{
+    display: flex;
+    flex-direction: column;
+    }
+    .ui-design_img{
+        width: 100%;
+    }
+    .ui-design_text{
+        width: 100%;
+    }
+
+
   .tabs-nav {
     padding-left: 0;
   }
@@ -1311,7 +1362,17 @@ p {
   .nav-link {
     margin: 0 10% 0 0;
   }
-
+  .ui-design{
+    display: flex;
+    flex-direction: column;
+    }
+    .ui-design_img{
+        width: 100%;
+    }
+    .ui-design_text{
+        width: 100%;
+    }
+    
   .slick-arrow {
     display: none;
     z-index: -1;
