--- a/css/style.css
+++ b/css/style.css
@@ -43,14 +43,14 @@ p {
 
 .header {
   width: 100%;
-  height: 10vh;
+  height: 7vh;
   background-color: #282a2e;
   position: fixed;
   z-index: 3;
 }
-.main-content {
-  padding-top: 10vh;
-}
+/* .main-content {
+  padding-top: 10vh; */
+/* } */
 
 .text-regular {
   font-family: "Roboto", sans-serif;
@@ -1285,9 +1285,11 @@ p {
   }
   .intro-subhead-text {
     font-size: 12px;
+    padding: 20% 20%;
   }
   .intro-head-text {
     font-size: 14px;
+    padding: 15% 20%;
   }
   .header__burger {
     position: relative;
@@ -1392,17 +1394,17 @@ p {
     height: 35vh;
   }
   .liked_container > h2 {
-    font-size: 23px;
+    font-size: 20px;
   }
   .liked_container > p {
-    font-size: 24px;
+    font-size: 20px;
     margin-top: 0.25em;
   }
   .liked_container_xs > h2 {
-    font-size: 20px;
+    font-size: 18px;
   }
   .liked_container_xs > p {
-    font-size: 20px;
+    font-size: 15px;
   }
   .card-img {
     width: 50px;
