--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,6 @@ p {
   position: fixed;
   z-index: 3;
 }
-/* .main-content {
-  padding-top: 10vh; */
-/* } */
 
 .text-regular {
   font-family: "Roboto", sans-serif;
@@ -91,7 +88,7 @@ p {
 
 .nav-link {
   color: #fff;
-  margin-left: 40px;
+  margin-left: 20px;
 }
 
 .nav-link:hover {
@@ -259,8 +256,8 @@ p {
 }
 
 .button_like {
-  width: 130px;
-  height: 40px;
+  width: 7.2em;
+  height: 2.2em;
   border-radius: 5px;
   font-size: 18px;
   font-weight: 300;
@@ -1115,20 +1112,21 @@ p {
   .navbar {
     position: fixed;
     top: -100%;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    width: 25%;
+    height: max-content;
     transition: all 0.3s ease 0s;
-    padding: 12vh 0 0 0;
+    padding: 8vh 2vh 2vh 2vh;
     background-color: #282a2e;
   }
   .navbar.active {
     top: 0;
+    opacity: .9;
   }
 
   .nav__list {
     display: block;
-    padding-left: 80%;
+    padding: 0;
   }
   .nav__list li {
     margin-bottom: 10px;
@@ -1338,20 +1336,20 @@ p {
   .navbar {
     position: fixed;
     top: -100%;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    width: 30%;
     transition: all 0.3s ease 0s;
-    padding: 12vh 0 0 0;
+    padding: 8vh 2vh 2vh 2vh;
     background-color: #282a2e;
   }
   .navbar.active {
     top: 0;
+    opacity: .9;
   }
 
   .nav__list {
     display: block;
-    padding-left: 80%;
+    padding: 0;
   }
   .nav__list li {
     margin-bottom: 10px;
